--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 
 }
+
+.mat-drawer {
+  width: 330px;
+  height: 100%;
+}
+
