--- a/src/app/components/current-user/current-user.component.scss
+++ b/src/app/components/current-user/current-user.component.scss
@@ -2,10 +2,21 @@
   text-align: center;
   padding: 1em 0 1em 0;
   line-height: 1.7em;
+      img {
+        height: 100%;
+  }
+
+  .mask {
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .button-container {
+    margin: 0 5px;
+  }
+
 }
 
-.user-info img {
-  border-radius: 200px;
-  width: 60%;
-  height: auto;
-}
