--- a/src/app/containers/teachers/teacher-journal/teacher-journal.component.html
+++ b/src/app/containers/teachers/teacher-journal/teacher-journal.component.html
@@ -1,4 +1,3 @@
-
 <table mat-table [dataSource]="teacherBindData" class="mat-elevation-z3">
   <div class="stripe"></div>
   <ng-container matColumnDef="subjectName">
@@ -16,3 +15,25 @@
 </table>
 
 
+<form [formGroup]="bindTeacherJournal">
+  <mat-form-field>
+    <input type="text" placeholder="Предмет" aria-label="Предмет" matInput formControlName="subjectsControl" [matAutocomplete]="subj" required>
+    <mat-autocomplete #subj="matAutocomplete" [displayWith]="displaySubjectName">
+      <mat-option *ngFor="let subject of subjects$ | async" [value]="subject">
+        {{subject.subjectName}}
+      </mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
+
+  <mat-form-field >
+    <input type="text" placeholder="Клас" aria-label="Клас" matInput formControlName="classesControl" [matAutocomplete]="cls" required>
+    <mat-autocomplete #cls="matAutocomplete" [displayWith]="displayClassesName">
+      <mat-option *ngFor="let class of classes$ | async" [value]="class">
+        {{class.className}}
+      </mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
+  <mat-card-actions>
+    <button mat-button type="submit" (click)="teacherJournalBind($event)" [disabled]="bindTeacherJournal.invalid"> Зберегти </button>
+  </mat-card-actions>
+</form>
