added student profile

--- a/src/app/pages/student/student.component.html
+++ b/src/app/pages/student/student.component.html
@@ -1,12 +1,19 @@
 <webui-header>
-  <!--<div class="container">-->
-    <!--<button-->
-      <!--routerLink="diary"-->
-      <!--mat-button-->
-    <!--&gt;-->
-      <!--Щоденник-->
-    <!--</button>-->
-    <!--<router-outlet></router-outlet>-->
-  <!--</div>-->
-  <router-outlet></router-outlet>
+  <div class="container">
+    <button
+      routerLink="profile"
+      mat-button
+    >
+      Профіль
+    </button>
+    <button
+      routerLink="diary"
+      mat-button
+    >
+      Щоденник
+    </button>
+    <router-outlet></router-outlet>
+  </div>
+
+  <!--<router-outlet></router-outlet>-->
 </webui-header>
