--- a/src/app/containers/teachers/teacher-journal/teacher-journal.component.scss
+++ b/src/app/containers/teachers/teacher-journal/teacher-journal.component.scss
@@ -36,6 +36,7 @@ mat-form-field {
   padding: 0.5rem;
   display: flex;
   align-items: flex-end;
+  justify-content: center;
 }
 
 mat-card-actions {
