--- a/src/app/components/transfer-students-table/transfer-students-table.component.html
+++ b/src/app/components/transfer-students-table/transfer-students-table.component.html
@@ -1,26 +1,31 @@
-<div class="table-title">Список учнів {{className}} класу</div>
-
-<div class="table-container">
-
-  <table mat-table [dataSource]="studentsList">
-  
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Ім'я </th>
-      <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef> Прізвище </th>
-      <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="patronymic">
-      <th mat-header-cell *matHeaderCellDef> По-батькові </th>
-      <td mat-cell *matCellDef="let element"> {{element.patronymic}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+<div class="alternative-title table-title" *ngIf="studentsList.length === 0; else studentsTable">
+  В {{className}} учні відсутні
 </div>
 
+<ng-template #studentsTable>
+  <div class="table-title">Список учнів {{className}} класу</div>
+
+  <div class="table-container">
+
+    <table mat-table [dataSource]="studentsList">
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Ім'я </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="surname">
+        <th mat-header-cell *matHeaderCellDef> Прізвище </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="patronymic">
+        <th mat-header-cell *matHeaderCellDef> По-батькові </th>
+        <td mat-cell *matCellDef="let element"> {{element.patronymic}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+</ng-template>
