--- a/src/app/components/new-year-controll/new-year-controll.component.html
+++ b/src/app/components/new-year-controll/new-year-controll.component.html
@@ -3,7 +3,7 @@
     <mat-label>Виберіть рік</mat-label>
     <mat-select [value]="currentYear" (selectionChange)="setYear($event.value)">
       <mat-option *ngFor="let year of sortedClassesYear" [value]="year">
-        {{year}}
+        {{year | newYear}}
       </mat-option>
     </mat-select>
   </mat-form-field>
