--- a/src/app/containers/new-year/new-year.component.scss
+++ b/src/app/containers/new-year/new-year.component.scss
@@ -1,3 +1,5 @@
+$base-background: #673ab7;
+
 table {
   width: 100%;
 }
@@ -59,5 +61,14 @@ tr.element-row:not(.expanded-row):active {
 
 webui-transfer-students-table {
   width: 100%;
+}
+
+.info-title {
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $base-background;
+  color: white;
 }
 
