--- a/src/app/pages/teacher/teacher.component.html
+++ b/src/app/pages/teacher/teacher.component.html
@@ -1,4 +1,5 @@
-<webui-teacher-nav>
-    <router-outlet></router-outlet>
-</webui-teacher-nav>
-
+<webui-header>
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</webui-header>
