--- a/src/app/containers/student-diary/student-diary.component.scss
+++ b/src/app/containers/student-diary/student-diary.component.scss
@@ -33,7 +33,7 @@
           mat-icon {
             vertical-align: middle;
             margin: -.7rem 0 -0.5rem;
-            padding: .7rem .4rem;
+            padding: .9rem .4rem;
             font-size: 28px;
             color: #2f255f;
             cursor: pointer;
@@ -107,8 +107,8 @@
           td {
             padding: .4rem .1rem;
             mat-icon {
-              margin: -.8rem 0 -0.4rem;
-              padding: 0.7rem;
+              margin: -.8rem 0 -.4rem;
+              padding: .9rem .4rem .7rem .4rem;
               font-size: 24px;
             }
           }
