--- a/src/app/components/homework-dialog/homework-dialog.component.scss
+++ b/src/app/components/homework-dialog/homework-dialog.component.scss
@@ -2,7 +2,7 @@ header, footer {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  height: 15%;
+  height: 10%;
   background: #5b33a1;
   button {
     background-color: #cccccc;
@@ -17,7 +17,7 @@ mat-dialog-content {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 70%;
+  height: 80%;
   background: #cccccc;
   img {
     max-width: 100%;
@@ -43,7 +43,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 479px) {
   button {
     transform: scale(0.6);
     margin-right: 1rem !important;
@@ -51,5 +51,23 @@ footer {
   h1 {
     text-align: center;
     font-size: 1rem;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 1023px) {
+  header, footer {
+    height: 15%;
+    button {
+      transform: scale(0.6);
+      margin-right: 1rem !important;
+    }
+  }
+
+  mat-dialog-content {
+    height: 70%;
+    h1 {
+      text-align: center;
+      font-size: 1rem;
+    }
   }
 }
