--- a/src/app/containers/student-profile/student-profile.component.html
+++ b/src/app/containers/student-profile/student-profile.component.html
@@ -1,4 +1,70 @@
-<p>student-profile works!</p>
+<mat-card>
 
-<div>{{(profile$ | async)?.firstname}}</div>
+  <mat-card-header>
+    <div>
+      <img mat-card-avatar [src]="avatar" alt="avatar">
+    </div>
+    <input type="file" #inputAvatar id="file" (change)="changeAvatar($event)" [hidden]="true">
+    <mat-card-actions>
+      <button mat-stroked-button type="button" (click)="inputAvatar.click()">Вибрати фото</button>
+    </mat-card-actions>
+  </mat-card-header>
 
+
+  <mat-card-content>
+    <form [formGroup]="profile" (ngSubmit)="onSubmit()">
+      <mat-form-field>
+        <input matInput placeholder="Ім'я" formControlName="firstname">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Прізвище" formControlName="lastname">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="По батькові" formControlName="patronymic">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Логін" formControlName="login">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Дата народження"
+          formControlName="dateOfBirth"
+          [matDatepicker]="datepicker"
+          [max]="maxDate"
+        >
+        <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
+        <mat-datepicker #datepicker></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Електронна скринька" formControlName="email">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Телефон" formControlName="phone">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput type="password" placeholder="Старий пароль" formControlName="oldPass">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput type="password" placeholder="Новий пароль" formControlName="newPass">
+      </mat-form-field>
+
+      <mat-form-field class="confirm-password">
+        <input matInput type="password" placeholder="Підтвердіть новий пароль" formControlName="newPass">
+      </mat-form-field>
+
+      <mat-card-actions>
+        <button mat-button type="submit">Зберегти</button>
+      </mat-card-actions>
+    </form>
+  </mat-card-content>
+
+</mat-card>
